# src/main/java/com/birdnest/application/endpoints/ViolatorEndpoint.java
@@ -1,15 +1,14 @@
 package com.birdnest.application.endpoints;
 
-import com.birdnest.application.Data.Violator;
+import com.birdnest.application.data.Violator;
 import com.birdnest.application.Monitor;
+import com.birdnest.application.data.ViolatorReport;
 import com.vaadin.flow.server.auth.AnonymousAllowed;
 import dev.hilla.Endpoint;
 import dev.hilla.Nonnull;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import javax.validation.constraints.NotNull;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -20,6 +19,7 @@ public class ViolatorEndpoint {
     @Autowired
     private Monitor monitor;
 
+    /*
     public @Nonnull List<Violator> getViolators() {
         var violators =  this.monitor.getViolators();
         System.out.println("----Map-----");
@@ -30,5 +30,15 @@ public class ViolatorEndpoint {
         for (Map.Entry<String, Violator> entry : violators.entrySet())
             list.add(entry.getValue());
         return (list);
+    }
+    */
+    public @Nonnull ViolatorReport getViolatorReport() {
+        var violatorReport =  this.monitor.getViolatorReport();
+        /*
+        for (Violator entry : violatorReport.violators())
+            System.out.println(entry);
+
+         */
+        return (violatorReport);
     }
 }
